add motor as lib

--- a/ctlMotor/Makefile
+++ b/ctlMotor/Makefile
@@ -1,3 +1,4 @@
 all:
 	gcc -c -fPIC motor.c -o motor.o -lrt -lwiringPi
-	gcc -shared -Wl,-soname,libmotor.so.1 -o libmotor.so.1.0.1  motor.o
+	ar arc motor.o -o libmotor.a 
+#	gcc -Wl,-soname,libmotor.so.1 -o libmotor.so.1.0.1  motor.o
