--- a/ctlMotor/Makefile
+++ b/ctlMotor/Makefile
@@ -1,4 +1,5 @@
 all:
 	gcc -c -fPIC motor.c -o motor.o -lrt -lwiringPi
 	ar arc motor.o -o libmotor.a 
-#	gcc -Wl,-soname,libmotor.so.1 -o libmotor.so.1.0.1  motor.o
+	gcc main.c motor.o -o motor.out -lrt -lwiringPi
+
